feat: final version begun

--- a/front.tex
+++ b/front.tex
@@ -35,12 +35,13 @@
 			\begin{flushleft}
 				\textit{Relatore} 
 				\\ 
-				(\textbf{Prof.} $\mid$ \textbf{Dott.}) \textbf{Nome Cognome}
+				\textbf{Prof.} \textbf{Giovanni Ciatto}
 				\\
 				\vspace{0.4cm}
 				\textit{Correlatore} 
 				\\
-				(\textbf{Ing.})? \textbf{Dott.} \textbf{Nome Cognome}
+				\textbf{Prof.} \textbf{Roberta Calegari}
+				\textbf{Prof.} \textbf{Andre Omicini}
 			\end{flushleft}
 		\end{minipage}
 		\begin{minipage}[t]{0.34\textwidth}
@@ -56,9 +57,9 @@
 		\vspace{0.3cm}
 		\Large
 		
-		(N-Esima) Sessione di Laurea
+		IV Sessione di Laurea
 		\\
-		Anno Accademico 20XX-20YY
+		Anno Accademico 2022-2023
 	\end{center}
 \end{titlepage}
 \restoregeometry
