--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -50,9 +50,22 @@
 \input{front.tex}
 
 \begin{abstract}
-    In light of growing AI adoption, concerns about potential discrimination have emerged. This study introduces a set of "fair-by-design" methodologies, which systematically embed fairness principles into AI systems. These techniques, primarily relying on established Python libraries and customized toolsets, focus on mitigating bias in AI predictions.\\
-    The research commenced with an exploration of various fairness techniques. To evaluate their efficacy, a real-world education dataset from the Canary Islands has been used. Comparative analysis was conducted between predictions generated using fair-by-design methods and those produced without fairness considerations. The results highlight the substantial impact of proactive fairness integration in system design.
-    Amid broader discussions concerning the ethical implications of AI, these fair-by-design methods offer a dispassionate approach to promoting equitable AI system performance, minimizing bias, and fostering responsible AI use.
+
+    %ABSTRACT 1
+    This work presents a series of software methodologies designed with a fair-by-design approach, aimed at addressing the issue of fairness in Artificial Intelligence (AI) systems right from the inception phase. As AI technologies continue to advance and integrate into various aspects of our lives, ensuring fairness and ethical considerations within these systems becomes paramount.   
+    The increasing impact of AI on decision-making processes, from credit scoring to job recruitment, highlights the urgency of addressing biases and fairness concerns. Fair-by-design methodologies represent a proactive and preventive approach, emphasizing the incorporation of fairness principles into the very fabric of AI system development.
+    This research delves into the conceptualization and implementation of fair-by-design methodologies, exploring techniques to mitigate bias in AI algorithms, datasets, and decision-making processes. By taking fairness into account from the early stages of system design, we aim to reduce the likelihood of perpetuating biases and discrimination.
+    The study reviews existing fairness metrics, explores various algorithmic fairness techniques, and examines real-world use cases where fair-by-design methodologies can be applied. By considering diverse perspectives and ethical considerations, this research strives to contribute to the broader goal of creating AI systems that are equitable, transparent, and accountable.
+    Key objectives include the development of practical guidelines for software engineers and AI practitioners to incorporate fairness into their projects. By doing so, we can foster the development of AI systems that promote diversity, inclusivity, and ethical decision-making. The ultimate goal is to enable AI systems to benefit society at large while minimizing the risks associated with bias and discrimination.
+    In conclusion, this work underscores the importance of fair-by-design software methodologies in the ethical development of AI systems and offers insights into practical approaches for addressing fairness challenges. By placing fairness at the core of AI design, we can make significant strides towards building AI systems that are not only technologically advanced but also socially responsible and just.
+    
+    %ABSTRACT 2
+    %This work presents a comparative analysis of different fair-by-design software approaches, where fair-by-design denotes methods in which fairness is considered from the very inception of the design process. As AI technologies continue to advance and integrate into various aspects of our lives, ensuring fairness and ethical considerations within these systems becomes paramount.
+    %The increasing impact of AI on decision-making processes, from credit scoring to job recruitment, highlights the urgency of addressing biases and fairness concerns. Fair-by-design methodologies represent a proactive and preventive approach, emphasizing the incorporation of fairness principles into the very fabric of AI system development.
+    %This research delves into the conceptualization and implementation of multiple fair-by-design methodologies, exploring techniques to mitigate bias in AI algorithms, datasets, and decision-making processes. By comparing these methodologies, we aim to identify the strengths and weaknesses of each approach and assess their effectiveness in addressing fairness concerns.
+    %The study reviews existing fairness metrics, explores various algorithmic fairness techniques, and examines real-world use cases where fair-by-design methodologies can be applied. By considering diverse perspectives and ethical considerations, this research strives to contribute to the broader goal of creating AI systems that are equitable, transparent, and accountable.
+    %Key objectives include the development of practical guidelines for software engineers and AI practitioners to incorporate fairness into their projects based on the insights gained from the comparative analysis. By doing so, we can foster the development of AI systems that promote diversity, inclusivity, and ethical decision-making. The ultimate goal is to enable AI systems to benefit society at large while minimizing the risks associated with bias and discrimination.
+    %In conclusion, this work underscores the importance of fair-by-design software methodologies in the ethical development of AI systems and offers insights into practical approaches for addressing fairness challenges through comparative analysis. By placing fairness at the core of AI design and evaluating various methodologies, we can make significant strides towards building AI systems that are not only technologically advanced but also socially responsible and just.
 \end{abstract}
 
 
@@ -73,27 +86,7 @@ Never too far down, to come back
 \label{chap:introduction}
 %----------------------------------------------------------------------------------------
 
-In recent years, there has been a notable increase in the utilization of artificial intelligence (AI) systems across various sectors. This rise is attributed to advancements in technology, the accessibility of extensive data, and heightened computational capabilities. \\
-AI has transcended its role as a mere performance enhancer and has begun exerting a profound impact on social contexts. These systems are now pervasive in healthcare, education, criminal justice, and other crucial domains, fundamentally reshaping decision-making processes and societal interactions. However, the reliance of AI systems on data for learning and decision-making implies that they inherit the biases embedded in these data. This inherent bias has the potential to perpetuate existing societal imbalances and prejudices. \\
-Addressing bias and ensuring fairness in AI algorithms is hence a pressing concern, necessitating continuous research, responsible development practices, and vigilant oversight to guarantee equitable outcomes for all. \\ 
-In this discussion, there will be a deep inspection into the intricate dynamics of biases and fairness in AI systems, exploring viable strategies to effectively mitigate these challenges.
 
-\paragraph{Artificial Intelligence}
-In recent years, artificial intelligence (AI) has undergone a remarkable evolution, transforming from a theoretical concept to a pervasive force shaping various facets of our lives. Advances in machine learning, particularly deep learning, have fueled this growth, enabling AI systems to process vast amounts of data and extract meaningful insights. 
-Notably, breakthroughs in natural language processing have led to more conversational AI, making interactions with machines increasingly human-like. Moreover, AI applications have expanded across sectors, encompassing healthcare, finance, transportation, and more. \\
-However, ethical considerations and the responsible development of AI have gained significant traction, prompting discussions on privacy, bias mitigation, and ensuring that AI benefits all of society. The future of AI promises continued innovation, fostering a symbiotic relationship between humans and machines for a more technologically enriched world. \cite{10.1145/3457607}
-\paragraph{Bias}
-In the realm of artificial intelligence, the issue of bias is a critical concern. AI systems are trained on historical data, and if this data carries biases related to gender, race, or other factors, the AI can inadvertently perpetuate and amplify these biases in its predictions or decisions. \\
-Addressing bias in AI necessitates a proactive approach, from carefully curating training data to developing algorithms that are designed to detect and mitigate bias. Furthermore, promoting diversity and inclusivity in the development teams is vital to ensuring that biases are recognized and addressed effectively. \cite{10.1145/3457607}
-\paragraph{Fairness}
-Ensuring fairness in AI is an ongoing and essential goal. It involves designing and implementing AI systems in a way that does not discriminate against individuals or groups based on characteristics like race, gender, or socioeconomic status. Achieving fairness demands a multidimensional approach, including a clear definition of fairness metrics, active involvement of diverse stakeholders, and regular audits of AI systems to detect and rectify any unfair biases. Additionally, incorporating transparency and accountability into the AI development process is crucial for building trust and ensuring fair outcomes for all users. \cite{10.1145/3457607} \cite{10.1145/3194770.3194776}
-\paragraph{Machine Learning and data}
-! Machine learning algorithms heavily rely on data to make predictions and decisions. However, the quality and representativeness of the data used are critical factors, especially in the context of fairness. Biases and unfairness can be inadvertently ingrained in machine learning models if the training data is skewed or reflects historical biases present in society. The data source plays a pivotal role in fairness issues, as biases present in the data, whether due to societal, cultural, or historical factors, can perpetuate and reinforce discriminatory outcomes. If the training data disproportionately represents a certain group, the model may learn to favor that group, leading to biased predictions and decisions. It is imperative to carefully curate and preprocess data, strive for diversity and representativeness, and continually evaluate and mitigate biases to promote fairness and ensure equitable outcomes in machine learning applications.
-\paragraph{Fair-by-design method}
-Since the huge impact that AI systems are having on daily life and more in general on the whole socio-technical systems it becomes crucial to design new AI methods and model that take account of fairness since the design step. That's why they are called fair-by-design methods.
-
-\paragraph{Structure of the Thesis}
-In the following is presented the \emph{State of the Art}, where are presented the basic concept on which this work is based. Then in \emph{Contribution} chapter there is the new contribution related to this work, that are the algorithms designed and implemented starting from the \emph{State of the Art}. The \emph{Evaluation} chapter provides a complete evalutation of the experiments results and the \emph{Conclusion and future work} presents ideas on what it's possible to achieve starting from the results of the work.
 %----------------------------------------------------------------------------------------
 \chapter{State of the Art} % or Background
 \label{chap:background}
