--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1090,7 +1090,7 @@ In the following are reported the results for each grade. More specifically for 
     \hline
 \end{tabular}
 
-\subection{Fairness through threshold optimizer with equalized odds constraint}
+\subsection{Fairness through threshold optimizer with equalized odds constraint}
 \subsubsection{Best models}
 \begin{tabular}{|c|c|}
     \hline
@@ -1255,7 +1255,7 @@ In the following are reported the results for each grade. More specifically for 
     \hline
 \end{tabular}
 
-\subection{Fairness through threshold optimizer with equalized odds constraint}
+\subsection{Fairness through threshold optimizer with equalized odds constraint}
 \subsubsection{Best models}
 \begin{tabular}{|c|c|}
     \hline
@@ -1419,7 +1419,7 @@ In the following are reported the results for each grade. More specifically for 
     \hline
 \end{tabular}
 
-\subection{Fairness through threshold optimizer with equalized odds constraint}
+\subsection{Fairness through threshold optimizer with equalized odds constraint}
 \subsubsection{Best models}
 \begin{tabular}{|c|c|}
     \hline
