feat: results added

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -965,11 +965,11 @@ In the following are reported the results for each grade. More specifically for 
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  \\
+    RandomForest Classifier  &  10, gini, 10, 10\\
     \hline
-    XGBoost Classifier & \\
+    XGBoost Classifier & 5, 1.5, 1.0, 0.8, 5\\
     \hline
-    DecisionTree Classifier &  \\
+    DecisionTree Classifier &  gini, 10, 10\\
     \hline
 \end{tabular}
 
@@ -978,11 +978,11 @@ In the following are reported the results for each grade. More specifically for 
     \hline
     \textbf{Model} & \textbf{Accuracy} \\
     \hline
-    RandomForest Classifier  &  \\
+    RandomForest Classifier  &  0.9738398544131028\\
     \hline
-    XGBoost Classifier & \\
+    XGBoost Classifier &  0.9741810737033667\\
     \hline
-    DecisionTree Classifier &  \\
+    DecisionTree Classifier &  0.9740673339399454\\
     \hline
 \end{tabular}
 
@@ -992,11 +992,11 @@ In the following are reported the results for each grade. More specifically for 
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  \\
+    RandomForest Classifier  &  10, gini, 10, 10\\
     \hline
-    XGBoost Classifier & \\
+    XGBoost Classifier & 1, 0.5, 1.0, 1.0, 4\\
     \hline
-    DecisionTree Classifier &  \\
+    DecisionTree Classifier &  entropy, 10, 10\\
     \hline
 \end{tabular}
 
@@ -1005,11 +1005,11 @@ In the following are reported the results for each grade. More specifically for 
     \hline
     \textbf{Model} & \textbf{Accuracy} \\
     \hline
-    RandomForest Classifier  &  \\
+    RandomForest Classifier  &  0.9738398544131028\\
     \hline
-    XGBoost Classifier & \\
+    XGBoost Classifier & 0.9738398544131028\\
     \hline
-    DecisionTree Classifier &  \\
+    DecisionTree Classifier &  0.9738398544131028\\
     \hline
 \end{tabular}
 
