--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,5 +1,5 @@
-In recent years, Artificial Intelligence (AI) has risen to prominence across a myriad of sectors, revolutionizing our daily lives. Its impact spans from medical diagnosis to traffic management, from finance to healthcare, and beyond. One sector undergoing significant transformation thanks to AI is education. The potential to improve access to education, personalize learning, and optimize educational resources through the use of Artificial Intelligence is on the rise.\\
-This work focuses on the field of education and relies on data collected within the education system of the Canary Islands. Here, AI is emerging as a key partner in shaping the future of learning. However, with this potential for benefit comes significant challenges related to fairness and ethics in education. Decisions made by AI systems, whether they pertain to access to educational programs, resource allocation, or student performance assessment, must be undertaken fairly and without discrimination.\\
-The present work seeks to address the challenge of fairness in education through the development of design and software development methodologies that place fairness at the core of the process from the earliest stages. The primary goal is to ensure that AI systems in education are designed to be fair and ethical from the outset. \\
-This work not only explores the current landscape of Artificial Intelligence in education but also proposes various methodologies through which fairness can be integrated from the design phase. These methodologies will provide practical guidelines for developers and key stakeholders in the education sector to ensure equitable access and equal opportunities for students.\\
-The work is organized into four key chapters. "State of the Art" will provide an overview of the current applications of AI in education. "Contribution" will present the proposed methodologies for fairness in education. "Validation" will examine the practical application of these methodologies using real data from the education system in the Canary Islands. Finally, "Conclusion" will wrap up the work by summarizing the findings and outlining the implications and future directions in the context of education and Artificial Intelligence.
+In recent years, Artificial Intelligence (AI) has emerged as a transformative force across a wide spectrum of sectors, fundamentally reshaping our daily lives. Its profound influence extends from enhancing medical diagnoses to streamlining traffic management, from bolstering financial services to optimizing healthcare, and well beyond. Among the sectors currently experiencing substantial upheaval thanks to the integration of AI is education. The potential for AI to improve educational access, tailor learning experiences, and optimize educational resources is on the ascent.
+This work centers its focus on the domain of education, drawing from data collected within the educational framework of the Canary Islands. Within this context, AI is surfacing as a pivotal collaborator in shaping the future of learning. Nevertheless, as this promising future unfolds, it brings forth formidable challenges entailing fairness and ethical conduct in the realm of education. AI systems are increasingly tasked with decision-making, spanning access to educational programs, resource allocation, and the assessment of student performance, making it imperative that such decisions are executed equitably, devoid of discrimination.
+The present study strives to confront the intricate quandary of fairness within the domain of education by fostering design and software development methodologies that meticulously embed fairness at the very heart of the developmental process, commencing from its nascent stages. The paramount objective is to engineer AI systems within the education sector that are inherently equitable and morally upright from their inception.
+This work not only delves into the present landscape of Artificial Intelligence within education but also advances a panoply of methodologies through which fairness may be seamlessly incorporated from the inception of the design process. These methodologies are poised to deliver pragmatic directives to software developers and key stakeholders operating within the educational domain, guaranteeing impartial access and identical opportunities for all students.
+The work is meticulously structured into four pivotal chapters. The chapter entitled "State of the Art" meticulously surveys the existing applications of AI within the educational sphere. The subsequent chapter, labeled "Contribution," introduces the array of methodologies designed to nurture fairness in education. The chapter designated as "Validation" scrutinizes the real-world implementation of these methodologies, utilizing authentic data culled from the education system of the Canary Islands. Finally, the concluding chapter, aptly named "Conclusion," culminates the study by recapitulating the findings and charting the course of implications and future trajectories within the context of education and Artificial Intelligence.
