fix: returned to previous version

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -85,7 +85,11 @@ Never too far down, to come back
 \chapter{Introduction}
 \label{chap:introduction}
 %----------------------------------------------------------------------------------------
-\include(./sections/introduction.tex)
+In recent years, Artificial Intelligence (AI) has emerged as a transformative force across a wide spectrum of sectors, fundamentally reshaping our daily lives. Its profound influence extends from enhancing medical diagnoses to streamlining traffic management, from bolstering financial services to optimizing healthcare, and well beyond. Among the sectors currently experiencing substantial upheaval thanks to the integration of AI is education. The potential for AI to improve educational access, tailor learning experiences, and optimize educational resources is on the ascent.
+This work centers its focus on the domain of education, drawing from data collected within the educational framework of the Canary Islands. Within this context, AI is surfacing as a pivotal collaborator in shaping the future of learning. Nevertheless, as this promising future unfolds, it brings forth formidable challenges entailing fairness and ethical conduct in the realm of education. AI systems are increasingly tasked with decision-making, spanning access to educational programs, resource allocation, and the assessment of student performance, making it imperative that such decisions are executed equitably, devoid of discrimination. \\
+The present study strives to confront the intricate quandary of fairness within the domain of education by fostering design and software development methodologies that meticulously embed fairness at the very heart of the developmental process, commencing from its nascent stages. The paramount objective is to engineer AI systems within the education sector that are inherently equitable and morally upright from their inception. \\
+This work not only delves into the present landscape of Artificial Intelligence within education but also advances a panoply of methodologies through which fairness may be seamlessly incorporated from the inception of the design process. These methodologies are poised to deliver pragmatic directives to software developers and key stakeholders operating within the educational domain, guaranteeing impartial access and identical opportunities for all students. \\
+The work is meticulously structured into four pivotal chapters. The chapter entitled "State of the Art" meticulously surveys the existing applications of AI within the educational sphere. The subsequent chapter, labeled "Contribution," introduces the array of methodologies designed to nurture fairness in education. The chapter designated as "Validation" scrutinizes the real-world implementation of these methodologies, utilizing authentic data culled from the education system of the Canary Islands. Finally, the concluding chapter, aptly named "Conclusion," culminates the study by recapitulating the findings and charting the course of implications and future trajectories within the context of education and Artificial Intelligence.
 %----------------------------------------------------------------------------------------
 \chapter{State of the Art} % or Background
 \label{chap:background}
