--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -24,15 +24,15 @@
 %\typeout{Document version: \version}
 
 \school{\unibo}
-\programme{Corso di Laurea [Magistrale?] in Ingegneria e Scienze Informatiche}
-\title{Fancy Title}
-\author{Candidate Name}
+\programme{Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche}
+\title{Fair-by-design algoriths for access to education}
+\author{Antonio Iannotta}
 \date{\today}
-\subject{Supervisor's course name}
-\supervisor{Prof. Supervisor Here}
-\cosupervisor{Dott. CoSupervisor 1}
-\morecosupervisor{Dott. CoSupervisor 2}
-\session{I}
+\subject{Intelligent Systems Engineering}
+\supervisor{Prof. Giovanni Ciatto}
+\cosupervisor{Prof. Roberta Calegari}
+\morecosupervisor{Prof. Andrea Omicini}
+\session{IV}
 \academicyear{2022-2023}
 
 % Definition of acronyms
