feat: front completed

--- a/front.tex
+++ b/front.tex
@@ -28,19 +28,20 @@
 		\vspace{1cm}
 		Tesi di laurea in 
 		\\
-		\textsc{Intelligent System Engineering}
+		\textsc{Intelligent Systems Engineering}
 		
 		\vspace{5.5cm}
 		\begin{minipage}[t]{0.64\textwidth}
 			\begin{flushleft}
 				\textit{Relatore} 
 				\\ 
-				(\textbf{Prof.} $\mid$ \textbf{Dott.}) \textbf{Nome Cognome}
+				\textbf{Prof.} \textbf{Giovanni Ciatto}
 				\\
 				\vspace{0.4cm}
 				\textit{Correlatore} 
 				\\
-				(\textbf{Ing.})? \textbf{Dott.} \textbf{Nome Cognome}
+				\textbf{Prof.} \textbf{Roberta Calegari}
+				\textbf{Prof.} \textbf{Andrea Omicini}
 			\end{flushleft}
 		\end{minipage}
 		\begin{minipage}[t]{0.34\textwidth}
