feat: abstract changed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -50,10 +50,16 @@
 \input{front.tex}
 
 \begin{abstract}
-    In light of growing AI adoption, concerns about potential discrimination have emerged. This study introduces a set of "fair-by-design" methodologies, which systematically embed fairness principles into AI systems. These techniques, primarily relying on established Python libraries and customized toolsets, focus on mitigating bias in AI predictions.\\
-    The research commenced with an exploration of various fairness techniques. To evaluate their efficacy, a real-world education dataset from the Canary Islands has been used. Comparative analysis was conducted between predictions generated using fair-by-design methods and those produced without fairness considerations. The results highlight the substantial impact of proactive fairness integration in system design.
-    Amid broader discussions concerning the ethical implications of AI, these fair-by-design methods offer a dispassionate approach to promoting equitable AI system performance, minimizing bias, and fostering responsible AI use.
-\end{abstract}
+
+    This master's thesis presents an in-depth approach to addressing fairness and bias mitigation in the design and development of data-driven methods. The primary contribution of this study is the proposal and implementation of an innovative Fair-by-Design workflow that incorporates various strategies for bias mitigation within data, algorithms, and decision-making processes. \\
+    The research focuses on the educational data of the Canary Islands, leveraging a dataset encompassing detailed information about student performance and educational outcomes. The primary objective is to ensure equitable and unbiased application of data-driven algorithms within the educational context. \\
+    The methodology involves the systematic evaluation of multiple bias mitigation strategies, including techniques for algorithmic fairness, data preprocessing, and model calibration. The critical aspect of this research centers on the comparison of these strategies based on their impact on the predictive accuracy of the algorithms. This approach provides practical insights into the trade-offs between fairness and accuracy. \\
+    The research findings offer valuable insights into the trade-offs between fairness and accuracy when developing data-driven methods for educational data. Through the proposed Fair-by-Design workflow, the study demonstrates how to strike a balance between ensuring fairness and maintaining the accuracy of predictions. \\
+    This thesis contributes to the ongoing discourse on fairness in machine learning and data-driven decision-making. The results provide guidance for stakeholders in the education sector, aiding them in making informed decisions about algorithm deployment to promote fairness and minimize bias within educational systems. \\
+    \textbf{Keywords:} Fair-by-Design, Bias Mitigation, Educational Data, Canary Islands, Algorithmic Fairness, Predictive Accuracy, Comparative Analysis.
+    
+    \end{abstract}
+    
 
 
 \begin{acknowledgements} % this is optional
